fix of visible section

--- a/src/sass/components/_app.scss
+++ b/src/sass/components/_app.scss
@@ -15,7 +15,7 @@ body{
       overflow: hidden;
     }
     .section{
-      overflow: inherit;
+      overflow: visible;
     }
     .gradient{
       background: rgb(50,184,244);
